# axp192-dd

./: 1.txt  2.txt  Cargo.toml  README.md  device.yaml  device_new.yaml  gen.rs
.github/workflows/: rust_ci.yml
docs/: AXP192_datasheet.md
examples/: test_pmic_async.rs  test_pmic_blocking.rs
src/: driver.rs  driver_core.rs  helpers.rs  lib.rs
