[package]
name = "axp192-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the AXP192 power management IC (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT"
repository = "https://github.com/okhsunrog/axp192-dd"
keywords = ["embedded-hal-driver", "async", "no-alloc", "no-std", "embedded"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"

[dependencies]
bisync = "0.3.0"
defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.4", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
num_enum = "0.7.3"
thiserror = { version = "2.0.12", default-features = false }

[features]
default = [] # Decide if you want a default (e.g., "async")
std = ["thiserror/std"] # For thiserror, if needed.
async = [] # Users can enable this feature
blocking = [] # Users can enable this feature
log = ["dep:log"]
defmt = ["dep:defmt", "device-driver/defmt-03"]
