[package]
name = "axp192-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the AXP192 power management IC (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT"
repository = "https://github.com/okhsunrog/axp192-dd"
keywords = ["embedded-hal-driver", "async", "no-alloc", "no-std", "embedded"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"

[dependencies]
bisync = { git = "https://github.com/okhsunrog/bisync.git", branch = "feature/optional-async-suffix" }
bisync_macros = { git = "https://github.com/okhsunrog/bisync.git", branch = "feature/optional-async-suffix" }
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.4", default-features = false, features = ["yaml"] }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["async"]
std = ["thiserror/std"]
async = ["dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
log = ["dep:log"]
defmt = ["dep:defmt", "device-driver/defmt-03"]
