[package]
name = "axp192-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the AXP192 power management IC (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT"
repository = "https://github.com/okhsunrog/axp192-dd"
keywords = ["embedded-hal-driver", "async", "no-alloc", "no-std", "embedded"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"

[dependencies]
bisync = "0.3"
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.4", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async =  "1.0.0"
thiserror = { version = "2.0.12", default-features = false }
bisync_suffix_macro = { git = " https://github.com/okhsunrog/bisync_suffix_macro", branch = "main" }

[features]
default = []
std = ["thiserror/std"]
async = []
blocking = []
log = ["dep:log"]
defmt = ["dep:defmt", "device-driver/defmt-03"]

[dev-dependencies]
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
] }
embassy-time = "0.4.0"
esp-hal = { version = "1.0.0-beta.0", features = [
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
defmt = "1.0"
defmt-rtt = "1.0"

[[example]]
name = "test_pmic_async"
required-features = ["async"]

[[example]]
name = "test_pmic_blocking"
required-features = ["blocking"]

[lib]
test = false
bench = false
